--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Vuurvliegje</title>
+    <title>Broederhuis - Vuurvliegje</title>
     <style>
       body {
         background: url(./huis.jpeg);
