--- a/index.html
+++ b/index.html
@@ -6,8 +6,34 @@
         background: url(./huis.jpeg);
         background-size: cover;
         background-position: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+          'Lucida Sans', Arial, sans-serif;
+      }
+
+      .modal {
+        background: rgba(0, 0, 0, 0.7);
+        color: white;
+        width: 20rem;
+        padding: 2rem;
+        border-radius: 10px;
       }
     </style>
   </head>
-  <body></body>
+  <body>
+    <div class="modal">
+      <p>Hi there, anonymous user!</p>
+
+      <p>
+        You're welcome to use the WIFI if you're in a bind, but you'll get
+        kicked out after 1 hour.
+      </p>
+
+      <p>There are no conditions, but no rights either.</p>
+
+      <p>Don't do illegal stuff.</p>
+    </div>
+  </body>
 </html>
