--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
   <head>
     <title>Broederhuis - Vuurvliegje</title>
     <style>
+      html {
+        font-size: 16px;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+          'Lucida Sans', Arial, sans-serif;
+      }
+
       body {
         background: url(./huis.jpeg);
         background-size: cover;
@@ -9,16 +15,16 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-          'Lucida Sans', Arial, sans-serif;
+        margin: 0;
       }
 
       .modal {
         background: rgba(0, 0, 0, 0.7);
         color: white;
-        width: 20rem;
+        max-width: 20rem;
         padding: 2rem;
         border-radius: 10px;
+        margin: 1rem;
       }
     </style>
   </head>
